# BitAllowanceServer

./: .#server.c  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  server  server.c  server.h  server.h.in
